--- a/client/index.html
+++ b/client/index.html
@@ -2,11 +2,13 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>MEAN project with Angular 2</title>
+  <title>Ride In</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+  <!--<script src="https://maps.googleapis.com/maps/api/js?v=3key=[AIzaSyBw5TJPDASMu9QPcyoWm_0XMzzC_rUH-Ow]" async defer></script>-->
+  <!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyA5E4pMg2NLB5dtfGMcsJHpLwYLU5hnfOk"></script>-->
 </head>
 <body>
   <app-root>Loading...</app-root>
