--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,9 @@
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
   <!--<script src="https://maps.googleapis.com/maps/api/js?v=3key=[AIzaSyBw5TJPDASMu9QPcyoWm_0XMzzC_rUH-Ow]" async defer></script>-->
   <!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyA5E4pMg2NLB5dtfGMcsJHpLwYLU5hnfOk"></script>-->
+  <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase-database.js"></script>
+
 </head>
 <body>
   <app-root>Loading...</app-root>
