--- a/client/index.html
+++ b/client/index.html
@@ -10,8 +10,9 @@
   <!--<script src="https://maps.googleapis.com/maps/api/js?v=3key=[AIzaSyBw5TJPDASMu9QPcyoWm_0XMzzC_rUH-Ow]" async defer></script>-->
   <!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyA5E4pMg2NLB5dtfGMcsJHpLwYLU5hnfOk"></script>-->
   <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase-database.js"></script>
+  <!--<script src="https://www.gstatic.com/firebasejs/3.9.0/firebase-database.js"></script>-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
 
 
 </head>
