--- a/client/index.html
+++ b/client/index.html
@@ -2,16 +2,28 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Ride In</title>
+  <title>InRide</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/logobar.png">
+  <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   <!--<script src="https://maps.googleapis.com/maps/api/js?v=3key=[AIzaSyBw5TJPDASMu9QPcyoWm_0XMzzC_rUH-Ow]" async defer></script>-->
   <!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyA5E4pMg2NLB5dtfGMcsJHpLwYLU5hnfOk"></script>-->
   <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
   <!--<script src="https://www.gstatic.com/firebasejs/3.9.0/firebase-database.js"></script>-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="author" content="RideIn">
+  <meta name="description" content="Your Ride Sharing App">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+  <title>InRide</title>
+  <!-- Page styles -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.min.css">
 
 
 
